files/script/test_all/compile_error/var/test_var_include.ll
package test
require "os"
import os.print

def test_var_include()
{
    var i[0]

    os.print("i = ", i)
}

